--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+
+  <!-- IMPORTANT for responsiveness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Luminorr Energy | Switch On the Future</title>
 
+  <!-- Global & Component CSS -->
   <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/navbar.css">
   <link rel="stylesheet" href="css/hero.css">
@@ -12,15 +17,32 @@
   <link rel="stylesheet" href="css/quote.css">
   <link rel="stylesheet" href="css/footer.css">
 </head>
+
 <body>
 
+  <!-- NAVBAR -->
   <div data-include="components/navbar.html"></div>
+
+  <!-- HERO -->
   <div data-include="components/hero.html"></div>
+
+  <!-- WHY CLEAN ENERGY / IMPACT -->
   <div data-include="components/impact.html"></div>
+
+  <!-- BLOG / CAMPAIGN CONTENT -->
   <div data-include="components/blog.html"></div>
+
+  <!-- QUOTE / LEAD FORM -->
   <div data-include="components/quote.html"></div>
+
+  <!-- FOOTER -->
   <div data-include="components/footer.html"></div>
 
+  <!-- INCLUDE HTML COMPONENTS -->
   <script src="js/include.js"></script>
+
+  <!-- WHATSAPP LEAD SCRIPT (VERY IMPORTANT) -->
+  <script src="js/quote.js"></script>
+
 </body>
 </html>
